FIX text wrapping in tiles

--- a/Template/js/openui5.template.css
+++ b/Template/js/openui5.template.css
@@ -22,3 +22,6 @@ pre.sf-dump .sf-dump-private, pre.sf-dump .sf-dump-public, pre.sf-dump .sf-dump-
 
 /* sap.m.Table */
 .sapMList.sapMListBGTranslucent.sapMListTblCnt {overflow-x: scroll}
+
+/* Tiles */
+.sapMTileCntContent .sapMFC.sapMTcInnerMarker {width: inherit !important;}
